cabal-version: 3.0
name: pact-json
version: 0.1.0.0
synopsis: Pact JSON Encoding
description: JSON encoding for the Pact smart contract language
homepage: https://github.com/kadena-io/pact-json
bug-reports: https://github.com/kadena-io/pact-json/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (C) 2022 Kadena LLC.
category: Language
build-type: Simple

extra-source-files:
    README.md
    CHANGELOG.md

-- -------------------------------------------------------------------------- --
-- Internal Libraries

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Pact.JSON.Decode
    Pact.JSON.Encode
    Pact.JSON.Legacy.HashMap
    Pact.JSON.Legacy.Hashable
    Pact.JSON.Legacy.Value
    Pact.JSON.Legacy.Utils
    Pact.JSON.Value
    Pact.JSON.Yaml
  build-depends:
    , aeson >=2.0
    , base <5
    , bytestring >=0.10
    , containers >=0.5
    , deepseq >=1.4
    , hashable >=1.4
    , scientific >=0.3
    , text >=2.0
    , unordered-containers >=0.2.16
    , vector >=0.12.2
    , yaml >= 0.11

test-suite json-tests
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts
  other-modules:
    Test.Pact.JSON.Encode
    Test.Pact.JSON.Legacy.Hashable
    Test.Pact.JSON.Legacy.HashMap
  build-depends:
    -- internal
    , pact-json

    -- external
    , QuickCheck >=2.14
    , aeson >=2.0
    , base <5
    , hashable >=1.4
    , hspec >=2.10
    , quickcheck-instances >=0.3
    , scientific >=0.3
    , text >=2.0
    , unordered-containers >=0.2.16

